--- a/src/Pages/Read.cshtml
+++ b/src/Pages/Read.cshtml
@@ -9,26 +9,33 @@
         <h1>@Model.Source.Title</h1>
         <p>@Model.Source.Subtitle</p>
     </div>
-    <div style="display: flex; flex-direction: column; flex-wrap: nowrap">
-        <div style="flex-direction:column">
-            @if (Model.Source.PublishedAt != default) {
-                <small style="white-space: nowrap">Publisert: @Model.Source.PublishedAt.ToString("dd-MM-yyyy hh:mm:ss")</small>
-            }
-            @if (Model.Source.UpdatedAt != default) {
-                <br/>
-                <small style="white-space: nowrap">Oppdatert: @Model.Source.UpdatedAt.ToString("dd-MM-yyyy hh:mm:ss")</small>
-            }
-        </div>
-        <div style="margin: 0 5px; border: 0.5px solid black"></div>
-        <div style="flex-direction:column">
-            @foreach (var author in Model.Source.Authors) {
-                <small style="white-space: nowrap"><b>@author.Name</b>: @author.Title</small>
-                <br/>
-            }
-        </div>
-    </div>
 </div>
 
 <div id="art-body">
     @Html.Raw(Model.Source.Content)
 </div>
+<footer>
+    <p>
+        <div style="display: flex; flex-direction: column; flex-wrap: nowrap;">
+            <div style="flex-direction:column">
+                @foreach (var author in Model.Source.Authors) {
+                    <small style="white-space: nowrap"><b>@author.Name</b>: @author.Title</small>
+                    <br/>
+                }
+            </div>
+            <div style="flex-direction: column">
+                @if (Model.Source.PublishedAt != default) {
+                    <small style="white-space: nowrap">Publisert: @Model.Source.PublishedAt.ToString("dd-MM-yyyy hh:mm:ss")</small>
+                }
+                @if (Model.Source.UpdatedAt != default) {
+                    <br/>
+                    <small style="white-space: nowrap">Oppdatert: @Model.Source.UpdatedAt.ToString("dd-MM-yyyy hh:mm:ss")</small>
+                }
+                <br/>
+                <small>
+                    <a href="@Model.Source.Href">Les på nrk.no</a>
+                </small>
+            </div>
+        </div>
+    </p>
+</footer>
